[gd_scene load_steps=23 format=2]

[ext_resource path="res://main/ui/assets/style_boxes/bottom_panel_container.tres" type="StyleBox" id=1]
[ext_resource path="res://main/ui/combat/fighter_container/FighterContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/ui/combat/combat.gd" type="Script" id=3]
[ext_resource path="res://main/ui/assets/themes/main.tres" type="Theme" id=4]
[ext_resource path="res://main/ui/assets/style_boxes/top_panel_container.tres" type="StyleBox" id=5]
[ext_resource path="res://main/ui/combat/press_turn_container/press_turn_container.gd" type="Script" id=6]
[ext_resource path="res://main/ui/combat/text_box/text_box.gd" type="Script" id=7]
[ext_resource path="res://main/ui/combat/circle_menu/background.png" type="Texture" id=8]
[ext_resource path="res://main/ui/combat/circle_menu/circle_menu.gd" type="Script" id=9]
[ext_resource path="res://main/ui/combat/circle_menu/circle_button/switch.png" type="Texture" id=10]
[ext_resource path="res://main/ui/combat/circle_menu/circle_button/skills.png" type="Texture" id=11]
[ext_resource path="res://main/ui/combat/circle_menu/circle_button/pass.png" type="Texture" id=12]
[ext_resource path="res://main/ui/combat/circle_menu/circle_button/items.png" type="Texture" id=13]
[ext_resource path="res://main/ui/combat/circle_menu/circle_button/run.png" type="Texture" id=14]
[ext_resource path="res://main/ui/combat/circle_menu/circle_button/defend.png" type="Texture" id=15]
[ext_resource path="res://main/ui/combat/circle_menu/skill_button/SkillButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://main/ui/combat/action_container/action_container.gd" type="Script" id=17]
[ext_resource path="res://main/ui/combat/fighter_selection/target_selector.gd" type="Script" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Blocker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Blocker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 0.631373 )

[node name="Combat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 0
custom_styles/panel = ExtResource( 5 )

[node name="PressTurnContainer" type="HBoxContainer" parent="VBoxContainer/Top"]
margin_left = 512.0
margin_top = 20.0
margin_right = 512.0
margin_bottom = 20.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/separation = 1
script = ExtResource( 6 )

[node name="Blocker" type="PanelContainer" parent="VBoxContainer/Top"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Top"]
playback_speed = 1.45
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[node name="Fighters" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 452.0
margin_top = 52.0
margin_right = 572.0
margin_bottom = 124.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_constants/separation = 7

[node name="FighterContainer" parent="VBoxContainer/Fighters" instance=ExtResource( 2 )]

[node name="TextBox" type="PanelContainer" parent="VBoxContainer"]
margin_top = 462.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 10
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TextBox"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 128 )

[node name="Tween" type="Tween" parent="VBoxContainer/TextBox"]

[node name="Timer" type="Timer" parent="VBoxContainer/TextBox"]
one_shot = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TextBox"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 133.0

[node name="CircleMenu" type="Control" parent="."]
margin_left = 270.0
margin_top = 160.0
margin_right = 670.0
margin_bottom = 288.0
rect_min_size = Vector2( 400, 128 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
transition_time = 0.09

[node name="Tween" type="Tween" parent="CircleMenu"]

[node name="LabelContainer" type="PanelContainer" parent="CircleMenu"]
margin_left = 108.0
margin_top = 44.0
margin_right = 236.0
margin_bottom = 84.0001
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CircleMenu/LabelContainer"]
margin_left = 1.0
margin_top = 8.0
margin_right = 127.0
margin_bottom = 32.0
text = "Skills"
align = 2

[node name="SkillContainer" type="PanelContainer" parent="CircleMenu"]
margin_left = 64.0
margin_right = 389.0
margin_bottom = 128.0
rect_min_size = Vector2( 325, 128 )
rect_scale = Vector2( 1e-05, 1 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
transition_time = 0.09

[node name="ScrollContainer" type="ScrollContainer" parent="CircleMenu/SkillContainer"]
margin_right = 325.0
margin_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="CircleMenu/SkillContainer/ScrollContainer"]
margin_right = 325.0
margin_bottom = 82.0
size_flags_horizontal = 11
custom_constants/separation = 0

[node name="Button" parent="CircleMenu/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 16 )]
margin_bottom = 30.0

[node name="Button2" type="Button" parent="CircleMenu/SkillContainer/ScrollContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 325.0
margin_bottom = 56.0
size_flags_horizontal = 11
text = "Trisagion 999mp"
align = 2

[node name="Button3" type="Button" parent="CircleMenu/SkillContainer/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 325.0
margin_bottom = 82.0
size_flags_horizontal = 11
text = "Maragidyne 999mp"
align = 2

[node name="Tween" type="Tween" parent="CircleMenu/SkillContainer"]

[node name="ItemContainer" type="PanelContainer" parent="CircleMenu"]
margin_left = 64.0
margin_top = -0.471924
margin_right = 389.0
margin_bottom = 127.528
rect_min_size = Vector2( 325, 128 )
rect_scale = Vector2( 1e-05, 1 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
transition_time = 0.09

[node name="ScrollContainer" type="ScrollContainer" parent="CircleMenu/ItemContainer"]
margin_right = 325.0
margin_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="CircleMenu/ItemContainer/ScrollContainer"]
margin_right = 325.0
margin_bottom = 78.0
size_flags_horizontal = 11
custom_constants/separation = 0

[node name="Button" type="Button" parent="CircleMenu/ItemContainer/ScrollContainer/VBoxContainer"]
margin_right = 325.0
margin_bottom = 26.0
size_flags_horizontal = 11
text = "Medicine x99"
align = 2

[node name="Button2" type="Button" parent="CircleMenu/ItemContainer/ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 325.0
margin_bottom = 52.0
size_flags_horizontal = 11
text = "Life Stone x12"
align = 2

[node name="Button3" type="Button" parent="CircleMenu/ItemContainer/ScrollContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 325.0
margin_bottom = 78.0
size_flags_horizontal = 11
text = "Balm of Life x2"
align = 2

[node name="Tween" type="Tween" parent="CircleMenu/ItemContainer"]

[node name="Background" type="TextureRect" parent="CircleMenu"]
modulate = Color( 1, 1, 1, 0.662745 )
margin_right = 164.0
margin_bottom = 164.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="CircleMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="TextureRect" parent="CircleMenu/Buttons"]
margin_left = 47.5683
margin_top = 45.7845
margin_right = 87.5683
margin_bottom = 85.7845
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pass" type="TextureRect" parent="CircleMenu/Buttons"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defend" type="TextureRect" parent="CircleMenu/Buttons"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="TextureRect" parent="CircleMenu/Buttons"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Switch" type="TextureRect" parent="CircleMenu/Buttons"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="TextureRect" parent="CircleMenu/Buttons"]
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetSelector" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
